# models/payment_details.go
@@ -8,7 +8,8 @@ type PaymentDetails struct {
 	PaymentMethod    *string    `gorm:"type:varchar(50)" json:"payment_method"`
 	GatewayReference *string    `gorm:"type:varchar(100)" json:"gateway_reference"`
 	VaNumber         *string    `gorm:"type:varchar(50)" json:"va_number"`
-	QrURL            *string    `gorm:"type:text" json:"qr_url"`
+	RedirectURL      *string    `gorm:"type:text" json:"redirect_url,omitempty"`
+	QrURL            *string    `gorm:"type:text" json:"qr_url,omitempty"`
 	PaidAt           *time.Time `gorm:"type:datetime" json:"paid_at"`
 	CreatedAt        time.Time  `gorm:"type:timestamp;default:CURRENT_TIMESTAMP" json:"created_at"`
 	UpdatedAt        time.Time  `gorm:"type:timestamp;default:CURRENT_TIMESTAMP on update CURRENT_TIMESTAMP" json:"updated_at"`
